@@ -4,12 +4,12 @@ strct-varg-1.c from the execute part of the gcc torture tests.
 
 #include <testfwk.h>
 
+#pragma disable_warning 85
+
 #include <stdarg.h>
 
 struct s { int x, y; };
 
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_mos6502) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) && \
-  (!defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) || defined(__SDCC_STACK_AUTO)) // Todo: enable when struct parmeters are supported!
 f (int attr, ...)
 {
   struct s va_values;
@@ -34,12 +34,10 @@ f (int attr, ...)
     ASSERT (0);
   va_end (va);
 }
-#endif
 
 void
 testTortureExecute (void)
 {
-#if 0 // Todo: enable when struct parmeters are supported!
   struct s a, b;
 
   a.x = 0xaaaa;
@@ -48,6 +46,5 @@ testTortureExecute (void)
   b.y = 0x1111;
 
   f (2, a, 3, b);
-#endif
   return;
 }
